updated spacing, fixed incomplete rows

--- a/panchoruy-website/src/styles.scss
+++ b/panchoruy-website/src/styles.scss
@@ -26,6 +26,8 @@ ul {
 body {
   overflow-y: scroll !important;
   overflow-x: hidden;
+  height: 100%;
+  width: 100%;
 }
 
 .photo {
